@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-17T16:14:17Z",
+  "timestamp" : "2023-07-19T16:12:06Z",
   "count_outdated" : 45,
   "uniques_outdated" : 34,
-  "count" : 52,
-  "uniques" : 39,
+  "count" : 53,
+  "uniques" : 40,
   "clones" : [
     {
       "timestamp": "2023-07-10T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
