@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 4,
   "clones": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
